--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   intl: ^0.16.1
+  universal_io: ^1.0.0
+
 
 dev_dependencies:
   # test: 1.15.1
